--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,7 +426,7 @@ section {
 --------------------------------------------------------------*/
 
 .about {
-  background-color: rgba(209, 209, 209, 0.061);
+  background-color: #fff;
 }
 
 .about .content{
